--- a/html/index.html
+++ b/html/index.html
@@ -1,17 +1,19 @@
+ <table style="width:100%">
+    <tr>
+      <th>Course</th>
+      <th>Description</th>
+      <th>Pre-requisite</th>
+      <th>Co-requisite</th>
+    </tr>
+    <tr>
+      <td>Jill</td>
+      <td>Smith</td>
+      <td>50</td>
+    </tr>
+    <tr>
+      <td>Eve</td>
+      <td>Jackson</td>
+      <td>94</td>
+    </tr>
+</table>
 
-
-<form action="/" method="POST">
-    <div>
-      <label for="say">What greeting do you want to say?</label>
-      <input name="say" id="say" value="Hi">
-    </div>
-    <div>
-      <label for="to">Who do you want to say it to?</label>
-      <input name="to" id="to" value="Mom">
-    </div>
-    <div>
-      <button>Send my greetings</button>
-    </div>
-</form>
-
-  
