--- a/html/index.html
+++ b/html/index.html
@@ -1,4 +1,4 @@
- <table style="width:100%">
+ <table class="enrollment-table" cellpadding="0" cellspacing="0">
     <tr>
       <th>Course</th>
       <th>Description</th>
@@ -9,11 +9,13 @@
       <td>Jill</td>
       <td>Smith</td>
       <td>50</td>
+      <td>50</td>
     </tr>
     <tr>
       <td>Eve</td>
       <td>Jackson</td>
       <td>94</td>
+      <td>50</td>
     </tr>
 </table>
 
