refactors code and fixes some styling issues

--- a/html/index.html
+++ b/html/index.html
@@ -1,21 +1,29 @@
- <table class="enrollment-table" cellpadding="0" cellspacing="0">
-    <tr>
-      <th>Course</th>
-      <th>Description</th>
-      <th>Pre-requisite</th>
-      <th>Co-requisite</th>
-    </tr>
-    <tr>
-      <td>Jill</td>
-      <td>Smith</td>
-      <td>50</td>
-      <td>50</td>
-    </tr>
-    <tr>
-      <td>Eve</td>
-      <td>Jackson</td>
-      <td>94</td>
-      <td>50</td>
-    </tr>
-</table>
+ <div class="table-padding">
+    <table class="enrollment-table" cellpadding="0" cellspacing="0">
+        <thead>
+            <tr>
+                <th class="row-1 row-Course">Course</th>
+                <th class="row-2 row-description">Description</th>
+                <th class="row-3 row-pre">Pre-requisite</th>
+                <th class="row-4 row-co">Co-requisite</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>Jill</td>
+                <td>Smith</td>
+                <td>50</td>
+                <td>50</td>
+              </tr>
+              <tr>
+                <td>Eve</td>
+                <td>Jackson</td>
+                <td>94</td>
+                <td>50</td>
+              </tr>
+        </tbody>
+        
+    </table>
+ </div>
+ 
 
