--- a/html/index.html
+++ b/html/index.html
@@ -13,18 +13,7 @@
   </table>
   <div class="scrolling-device">
     <table class="enrollment-table-body" cellpadding="0" cellspacing="0">
-      <tbody>
-        <tr>
-          <td>1</td>
-          <td>MATE3300</td>
-          <td>INTRODUCCION A LOS FUNDAMENTOS DE LA MATEMATICA</td>
-          <td>MATE2030</td>
-          <td>MATE2030, MATE2020</td>
-          <td><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="green">
-              <path
-                d="M12 2c5.514 0 10 4.486 10 10s-4.486 10-10 10-10-4.486-10-10 4.486-10 10-10zm0-2c-6.627 0-12 5.373-12 12s5.373 12 12 12 12-5.373 12-12-5.373-12-12-12zm4.393 7.5l-5.643 5.784-2.644-2.506-1.856 1.858 4.5 4.364 7.5-7.643-1.857-1.857z" />
-            </svg></td>
-        </tr>
+      <tbody id="enrollment-tbody">
         <tr>
           <td>2</td>
           <td>Eve</td>
