Changed from number to demand column

--- a/html/index.html
+++ b/html/index.html
@@ -2,7 +2,7 @@
   <table class="enrollment-table" cellpadding="0" cellspacing="0">
     <thead>
       <tr class="row-header">
-        <th class="col-no"> No. </th>
+        <th class="col-no"> Demand </th>
         <th class="col-course">Course</th>
         <th class="col-description">Description</th>
         <th class="col-pre">Pre-requisite</th>
