Added new column to the table

--- a/html/index.html
+++ b/html/index.html
@@ -8,6 +8,7 @@
         <th class="col-pre">Pre-requisite</th>
         <th class="col-co">Co-requisite</th>
         <th class="col-met">Req. met</th>
+        <th class="col-eno">Enroll</th>
       </tr>
     </thead>
   </table>
